# betterargs

./: .gitignore  LICENSE  README.md  pyproject.toml
src/betterargs/: __init__.py  constructor.py  deserializer.py  utils.py
src/tests/: __init__.py
src/tests/data/args/: args.json  args.toml  args.xml  args.yaml
src/tests/data/files_to_be_read/: non-utf-8.txt  utf-8.txt
src/tests/test_betterargs/: __init__.py  test_init.py  test_utils.py
