[tool.poetry]
name = "betterargs"
version = "0.0.4"
description = "Create command line interfaces fast and easy"
authors = ["DanielMuringe <danielmuringe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.13.0"
pyyaml = "^6.0.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
